# WinR

./: Cargo.toml  License.md  README.md
src/: lib.rs
src/core/: mod.rs
src/core/components/: base_component.rs  mod.rs  text_component.rs
src/core/components/elements/: button.rs  icon.rs  link.rs  mod.rs
src/core/components/forms/: button.rs  label.rs  mod.rs
src/core/components/layouts/: container.rs
src/core/components/properties/: boundaries.rs  margin.rs  mod.rs  overflow.rs  padding.rs  position.rs  size.rs  typography.rs
src/core/components/properties/graphics/: action_state.rs  background.rs  border.rs  color.rs  gradient.rs  mod.rs
src/core/components/styles/: base_styles.rs  button.rs  mod.rs
src/core/ui/: cursor_tracker.rs  layout_manager.rs  mod.rs  transition_manager.rs
src/core/ui/elements/: theme.rs  view.rs
src/core/ui/systems/: layout_system.rs  mod.rs  navigation_system.rs  theme_system.rs  transition_system.rs
src/core/utils/: functions.rs
src/core/utils/traits/: event_listener.rs  mod.rs  observable.rs  renderable.rs  style_merge.rs
src/core/window/events/: event_system.rs  mod.rs  types.rs
src/testing/: mod.rs
src/testing/serialization/: background_tests.rs  border_tests.rs  color_tests.rs  gradient_tests.rs  margin_tests.rs  mod.rs  overflow_tests.rs  padding_tests.rs  position_tests.rs  size_tests.rs
