[package]
name = "WinR"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
authors = ["Gaspar Gómez Kral <gaspargkral@gmail.com>"]
description = "WinForm-style application interface development library for Rust"
repository = "https://github.com/GasparKral/WinR"

[dependencies]
regex = "1.11.1"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
windows = "0.61.3"
